--- a/docs/app.css
+++ b/docs/app.css
@@ -116,7 +116,7 @@ label {
 
 
 #credit1 {
-  background: url(http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png) -27px -15px no-repeat;
+  background: url(https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png) -27px -15px no-repeat;
   position: absolute;
   top: 0;
   right: 0;
